--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="styles.a98d2938b3fc13c04d8e.css"></head>
-<body class="mat-typography" style="background-color: #fff;" > 
+<body class="mat-typography" style="background-color: #000;" > 
   <app-root></app-root>
 <script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.a8106013e4885a0460e7.js" type="module"></script><script src="main-es5.a8106013e4885a0460e7.js" nomodule defer></script></body>
 </html>
